--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,10 @@ langchain-community==0.0.10
 transformers==4.36.0
 sentence-transformers==2.2.2
 
+# Vector search and ML
+scikit-learn==1.3.2
+faiss-cpu==1.7.4  # For more advanced vector search (optional)
+
 # Utilities
 python-dotenv==1.0.0
 pydantic==2.5.0
