--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # OpenAI API Configuration
-OPENAI_API_KEY=sk-proj-your-api-key-here
+OPENAI_API_KEY=your-api-key-here
 
-# Optional: Model Configuration
-OPENAI_MODEL=gpt-3.5-turbo-1106
+# Optional: Override default model
+# OPENAI_MODEL=gpt-3.5-turbo-1106
